Fix panel collapse toggle icon
See issue aop/axelor-open-platform#350

--- a/src/core/panel/panel.module.scss
+++ b/src/core/panel/panel.module.scss
@@ -121,6 +121,7 @@
 }
 
 .toggle > button > span {
+  transform: rotate(-180deg);
   transition: transform 300ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
 }
 
@@ -128,7 +129,7 @@
 .exiting,
 .exited {
   .toggle > button > span {
-    transform: rotate(-180deg);
+    transform: rotate(0deg);
   }
 }
 
